fix(modularity): resolve isolated local vault paths and project root detection
- Update XplModuleManager to prioritize local project files before querying the SDM vault.
- Fix physical file resolution for local packages mapped via sdm.lock.
- Enhance XplRuntime to automatically detect the true project root (containing sdm.lock) from nested script paths.
- Successfully integrate and execute the com.dic.validators security lifecycle module.